--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "directories": {
     "example": "examples"
   },
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "csv-stringify": "^2.0.2",
+    "express": "^4.16.2",
+    "handsontable": "^0.35.1"
+  },
   "devDependencies": {
     "csv-parse": "^2.0.0",
     "typedoc": "^0.9.0",
