--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "yargs": "^11.0.0"
   },
   "scripts": {
+    "start": "npm run serve-editor",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-docs": "typedoc --module commonjs --theme minimal --includeDeclarations --excludeExternals --out ./dist ./src",
     "serve-docs": "http-server ./dist",
